[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/30-Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/LayoutCreator.gd" type="Script" id=2]
[ext_resource path="res://Fonts/40-Font.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 0, 0, 0.294118 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxTexture" id=37]

[sub_resource type="StyleBoxTexture" id=36]

[node name="LayoutCreator" type="ScrollContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -550.0
margin_top = -262.5
margin_right = 550.0
margin_bottom = 262.5
custom_styles/bg = SubResource( 25 )
script = ExtResource( 2 )

[node name="Container" type="VBoxContainer" parent="."]
margin_right = 1100.0
margin_bottom = 366.0
size_flags_horizontal = 3

[node name="Invis2" type="HSeparator" parent="Container"]
margin_right = 1100.0
margin_bottom = 4.0
custom_constants/separation = 4
custom_styles/separator = SubResource( 37 )

[node name="Label" type="Label" parent="Container"]
margin_top = 8.0
margin_right = 1100.0
margin_bottom = 49.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = ExtResource( 3 )
text = "Title:"
valign = 1

[node name="Invis" type="HSeparator" parent="Container"]
margin_top = 53.0
margin_right = 1100.0
margin_bottom = 53.0
custom_constants/separation = -5
custom_styles/separator = SubResource( 37 )

[node name="TextEdit" type="TextEdit" parent="Container"]
margin_top = 57.0
margin_right = 1100.0
margin_bottom = 87.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 1 )
text = "NoName"
caret_blink = true

[node name="VIs" type="HSeparator" parent="Container"]
margin_top = 91.0
margin_right = 1100.0
margin_bottom = 115.0
custom_constants/separation = 24

[node name="LuckNumbers" type="Control" parent="Container"]
margin_top = 119.0
margin_right = 1100.0
margin_bottom = 169.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="Container/LuckNumbers"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Container/LuckNumbers/HBoxContainer"]
margin_top = 4.0
margin_right = 1046.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Use Lucknumbers"
valign = 1

[node name="CheckBoxContainer" type="Control" parent="Container/LuckNumbers/HBoxContainer"]
margin_left = 1050.0
margin_right = 1100.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="CheckBox" type="CheckBox" parent="Container/LuckNumbers/HBoxContainer/CheckBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_right = -5.0
margin_bottom = -5.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="CombineLastTwo" type="Control" parent="Container"]
margin_top = 173.0
margin_right = 1100.0
margin_bottom = 223.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="Container/CombineLastTwo"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Container/CombineLastTwo/HBoxContainer"]
margin_top = 4.0
margin_right = 1046.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Combine last 2"
valign = 1

[node name="CheckBoxContainer" type="Control" parent="Container/CombineLastTwo/HBoxContainer"]
margin_left = 1050.0
margin_right = 1100.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="CheckBox" type="CheckBox" parent="Container/CombineLastTwo/HBoxContainer/CheckBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_right = -5.0
margin_bottom = -5.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="MaxFails" type="Control" parent="Container"]
margin_top = 227.0
margin_right = 1100.0
margin_bottom = 277.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="Container/MaxFails"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Container/MaxFails/HBoxContainer"]
margin_top = 4.0
margin_right = 962.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Max Fails"
valign = 1

[node name="Less" type="Button" parent="Container/MaxFails/HBoxContainer"]
margin_left = 966.0
margin_right = 1015.0
margin_bottom = 50.0
text = "  <  "

[node name="Label2" type="Label" parent="Container/MaxFails/HBoxContainer"]
margin_left = 1019.0
margin_top = 4.0
margin_right = 1047.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 3 )
text = "4"
valign = 1

[node name="More" type="Button" parent="Container/MaxFails/HBoxContainer"]
margin_left = 1051.0
margin_right = 1100.0
margin_bottom = 50.0
text = "  >  "

[node name="VIs2" type="HSeparator" parent="Container"]
margin_top = 281.0
margin_right = 1100.0
margin_bottom = 305.0
custom_constants/separation = 24

[node name="AddRails" type="Control" parent="Container"]
margin_top = 309.0
margin_right = 1100.0
margin_bottom = 359.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="Container/AddRails"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Container/AddRails/HBoxContainer"]
margin_top = 4.0
margin_right = 912.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Rails:"
valign = 1

[node name="Button" type="Button" parent="Container/AddRails/HBoxContainer"]
margin_left = 916.0
margin_right = 1100.0
margin_bottom = 50.0
text = "  Add Rail  "

[node name="Rails" type="HBoxContainer" parent="Container"]
margin_top = 363.0
margin_right = 1100.0
margin_bottom = 366.0

[node name="VSeparator" type="VSeparator" parent="Container/Rails"]
margin_right = 50.0
margin_bottom = 3.0
custom_constants/separation = 50
custom_styles/separator = SubResource( 36 )

[node name="Contents" type="VBoxContainer" parent="Container/Rails"]
margin_left = 54.0
margin_right = 1100.0
margin_bottom = 3.0
size_flags_horizontal = 3

[connection signal="text_changed" from="Container/TextEdit" to="." method="_on_Title_changed"]
[connection signal="pressed" from="Container/LuckNumbers/HBoxContainer/CheckBoxContainer/CheckBox" to="." method="_on_LuckyNumbers_pressed"]
[connection signal="pressed" from="Container/CombineLastTwo/HBoxContainer/CheckBoxContainer/CheckBox" to="." method="_on_CombineLastTwo_pressed"]
[connection signal="pressed" from="Container/MaxFails/HBoxContainer/Less" to="." method="_on_MaxFailsLess_pressed"]
[connection signal="pressed" from="Container/MaxFails/HBoxContainer/More" to="." method="_on_MaxFailsMore_pressed"]
[connection signal="pressed" from="Container/AddRails/HBoxContainer/Button" to="." method="_on_AddRail_pressed"]
